Removed progress indicator number

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p id="filereader">File API & FileReader API not supported</p>
         <p id="formdata">XHR2's FormData is not supported</p>
         <p id="progress">XHR2's upload progress isn't supported</p>
-        <p>Progrés de la càrrega:<progress id="uploadprogress" max="100" value="0">0</progress></p>
+        <p>Progrés de la càrrega<progress id="uploadprogress" max="100" value="0">0</progress></p>
         <p>Per a pujar un document, si us plau, arrosega el fitxer a la caixa superior</p>
       </article>
     </main>
